package com.oscar.football_api.entity.enums;


public enum League {
    PREMIER_LEAGUE,
    LA_LIGA,
    SERIE_A,
    BUNDESLIGA,
    LIGUE_1
}